--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
 - '2.7'
 install:
 - pip install slacker -t ./dist
+- pip install requests -t ./dist
 script: ./build.sh
 deploy:
   provider: releases
